--- a/src/stylesheets/swiftvote.css
+++ b/src/stylesheets/swiftvote.css
@@ -85,7 +85,7 @@ p {
 .concept-img {
   max-width: 800px;
   width: 100%;
-  object-fit: cover;
+  object-fit: fit;
 }
 
 .img-wrapper {
